# aws-local

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yml
src/: Cargo.toml
src/aws-local/: Cargo.toml
src/aws-local/src/: config.rs  handler.rs  lambda.rs  logging.rs  main.rs  request.rs  response.rs  server.rs
src/samples/aws-http-server/: Cargo.toml
src/samples/aws-http-server/src/: main.rs
