[package]
name = "aws-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1", "json"] }
lambda_http = { version = "0.9.2", default-features = false, features = ["apigw_http"] }
serde_json = { version = "1.0.113", default-features = false, features = [] }
tokio = { version = "1.36.0", default-features = false, features = [] }
